--- a/eventix/eventix/eventix/src/main/resources/application.properties
+++ b/eventix/eventix/eventix/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.password=1234567
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# File Upload Configuration
+file.upload-dir=uploads/events
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
