--- a/eventix/eventix/frontend/package.json
+++ b/eventix/eventix/frontend/package.json
@@ -9,7 +9,8 @@
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "recharts": "^3.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
